--- a/package.json
+++ b/package.json
@@ -9,20 +9,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "8.0.1",
     "expo": "~51.0.14",
+    "expo-blur": "~13.0.2",
+    "expo-constants": "~16.0.2",
+    "expo-font": "~12.0.7",
+    "expo-linking": "~6.3.1",
+    "expo-router": "~3.5.16",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.74.2",
-    "expo-router": "~3.5.16",
+    "react-native-datepicker": "^1.7.2",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "expo-linking": "~6.3.1",
-    "expo-constants": "~16.0.2",
-    "react-native-web": "~0.19.10",
-    "react-dom": "18.2.0",
-    "expo-font": "~12.0.7",
-    "expo-blur": "~13.0.2",
-    "@react-native-community/datetimepicker": "8.0.1"
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
