--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-community/datetimepicker": "8.0.1",
-    "expo": "~51.0.14",
+    "expo": "~51.0.20",
     "expo-blur": "~13.0.2",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.7",
@@ -20,6 +21,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.2",
+    "react-native-autocomplete-input-expo": "^1.1.0",
     "react-native-datepicker": "^1.7.2",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
