--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-community/datetimepicker": "8.0.1",
+    "@reduxjs/toolkit": "^2.2.7",
+    "axios": "^1.7.3",
     "expo": "~51.0.20",
     "expo-blur": "~13.0.2",
     "expo-constants": "~16.0.2",
@@ -26,7 +28,8 @@
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-toast-message": "^2.2.0",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
