--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native": "0.74.2",
     "react-native-autocomplete-input-expo": "^1.1.0",
     "react-native-datepicker": "^1.7.2",
+    "react-native-otp-textinput": "^1.1.6",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-toast-message": "^2.2.0",
