--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "react-native-screens": "3.31.1",
     "react-native-toast-message": "^2.2.0",
     "react-native-web": "~0.19.10",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "expo-notifications": "~0.28.18",
+    "expo-device": "~6.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0"
