--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "expo": "~51.0.20",
     "expo-blur": "~13.0.2",
     "expo-constants": "~16.0.2",
+    "expo-device": "~6.0.2",
     "expo-font": "~12.0.10",
     "expo-linking": "~6.3.1",
+    "expo-notifications": "~0.28.18",
     "expo-router": "~3.5.23",
     "expo-status-bar": "~1.12.1",
+    "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
@@ -30,9 +33,7 @@
     "react-native-screens": "3.31.1",
     "react-native-toast-message": "^2.2.0",
     "react-native-web": "~0.19.10",
-    "react-redux": "^9.1.2",
-    "expo-notifications": "~0.28.18",
-    "expo-device": "~6.0.2"
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0"
